# draft

./: .gitignore  .gitmodules  LICENSE  README.md  draft.in  meson.build  meson_postinstall.py  noto.in
data/: aboutdialog.ui.in  application.css  appmenu.ui  contentview.ui  dialogbox.ui  draft.gresource.xml  editor.ui  export.ui  grouptreeview.ui  headerbar.ui  librarypanelview.ui  meson.build  notesview.ui  noto.gresource.xml  org.gnome.Draft.desktop.in  org.gnome.Draft.gschema.xml  org.gnome.Noto.gschema.xml  preferences.ui  searchbox.ui  statusbar.ui  textlistview.ui  textpanelview.ui  textview.ui  thesaurusbox.ui  webview.css  window.ui
data/icons/: meson.build
data/icons/hicolor/: icons.gresource.xml  render-symbolic.py
data/styles/: byword.css  default.css  kult.css  retro.css
draftsrc/: app.py  defs.py.in  export.py  file.py  htmlstrings.py  markup.py  meson.build  search.py  thesaurus.py  window.py
draftsrc/db/: __init__.py  data.py  migrations.py  requestqueue.py
draftsrc/models/: collectionliststore.py  grouptreestore.py  tagliststore.py  textliststore.py
draftsrc/parsers/: markup.py  webstrings.py
draftsrc/views/: contentview.py  librarypanelview.py  listview.py  panelview.py  store.py  textpanelview.py
draftsrc/widgetmodels/: grouptreestore.py  textliststore.py
draftsrc/widgets/: __init__.py  collectionlist.py  editor.py  grouptree.py  headerbar.py  preview.py  searchbox.py  statusbar.py  taglist.py  textlist.py  thesaurusbox.py
draftsrc/widgets/editor/: __init__.py  editor.py  sourcebuffer.py  sourceview.py  statusbar.py  thesaurusbox.py
notosrc/: .app.py.swp  __init__.py  app.py  contentview.py  data.py  datamodel.py  editor.py  file.py  listview.py  markdown.py  meson.build  model.py  notesview.py  store.py  textview.py  treestore.py  webview.py  window.py
notosrc/db/: __init__.py  data.py  migrations.py
notosrc/parsers/: markup.py  webstrings.py
notosrc/static/: content.py
notosrc/utils/: mistune.py  progresstracker.py
notosrc/views/: contentview.py  listview.py  notesview.py  store.py
notosrc/widgets/: editor.py  preview.py  statusbar.py
